Fix workshop icon text overflowing

--- a/Code/UI/SpawnMenu/Dupes/WorkshopIcon.razor.scss
+++ b/Code/UI/SpawnMenu/Dupes/WorkshopIcon.razor.scss
@@ -17,6 +17,7 @@ WorkshopIcon
     padding: 0.5rem 1rem;
     margin: 0.5rem;
     font-weight: 600;
+    max-width: 90%;
 }
 
 .title
